update dependencies (incl. Jenkins 2.440.3) and fixed some deprecations and minor refactoring