@@ -23,7 +23,6 @@ import hudson.plugins.sonar.client.WsClient.CETask;
 import java.io.IOException;
 import java.net.URISyntaxException;
 import java.net.URL;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -106,7 +105,7 @@ public class WsClientTest {
   private String getFile(String name) throws IOException, URISyntaxException {
     URL resource = this.getClass().getResource(name);
     Path p = Paths.get(resource.toURI());
-    return new String(Files.readAllBytes(p), StandardCharsets.UTF_8);
+    return Files.readString(p);
   }
 
 }
